# newlife-core-api

./: .gitignore  AGENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_02_20_2100-02a96eeb84e4.py  2026_04_27_1928-ea7fb3945441.py  2026_04_28_2325-f2e4575c6a3e.py  2026_06_30_1210-ca9cd1da49c4.py  2026_07_10_1345-2e4a67829714.py  2026_07_15_1521-4dc556afd7b4.py  2026_07_19_2211-b2a237486622.py
portal/: __init__.py  __main__.py  apps.py  config.py  container.py  main.py  runtime_context.py
portal/application/: __init__.py
portal/authorization/: __init__.py  access_token.py
portal/cli/: __init__.py  init_locale.py  main.py  rbac.py  seed_facility_rental.py  seed_ministry_type.py  seed_position.py  seed_target_audience.py  superuser.py  sync_microsoft_users.py
portal/containers/: __init__.py  admin.py  content.py  core.py  events.py  facility.py  org.py
portal/domain/: __init__.py
portal/events/: __init__.py  base.py  bus.py  publisher.py
portal/exceptions/: __init__.py
portal/handlers/: __init__.py  user.py
portal/middlewares/: __init__.py  auth_middleware.py  core_request.py
portal/models/: __init__.py  auth.py  rbac.py  relationships.py  system_locale.py  user.py
portal/providers/: __init__.py  jwt_provider.py  microsoft_graph_provider.py  (+4 more)
tests/: conftest.py  test_admin_auth_microsoft.py  test_admin_multilingual_serializers.py  test_core_request_middleware_locale.py  test_execute_result.py  test_microsoft_oidc_provider.py  test_resolved_locale_id.py
(+298 files in other folders)
